file(GLOB PREVIEW_SRC "*.h" "*.cpp")
include_directories(../vsal/include)
add_executable(preview ${PREVIEW_SRC})
target_link_libraries(preview vsal opencv_core opencv_highgui opencv_imgproc)
set_target_properties(preview PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
install(TARGETS preview EXPORT vsal-targets DESTINATION bin COMPONENT bin)
