file(GLOB PREVIEW_SRC "*.h" "*.cpp")
include_directories(../vsal/include)
add_executable(preview ${PREVIEW_SRC})
target_link_libraries(preview vsal opencv_core opencv_highgui opencv_imgproc)
if(UNIX)
	target_link_libraries(preview ${Boost_LIBRARIES})
endif(UNIX)
set_target_properties(preview PROPERTIES DEBUG_POSTFIX _d)
install(TARGETS preview EXPORT vsal-targets DESTINATION bin COMPONENT bin)
